--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,85 @@
   color: #61dafb;
 }
 
+.image-row{
+  height: 40vh;
+}
+
+.dp-image{
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url("./components/images/dp.png");
+  background-position: center;
+  shape-outside: circle();
+  clip-path: circle();
+}
+
+.name{
+  text-align: center;
+  font-size: 2.5rem;
+  font-family: satisfyRegular;
+  color: darkgreen;
+  font-weight: bold;
+}
+.intro-text{
+  text-align: justify;
+  padding: 2% 15% 1% 15%;
+}
+
+.intro-detail{
+  text-align: justify;
+  text-align-last: center;
+  font-family: satisfyRegular;
+  font-size: 1.5rem;
+  color: black;
+}
+
+.right-float{
+  float: right;
+}
+
+@font-face {
+  font-family: satisfyRegular;
+  src: url("./components/fonts/satisfy.regular.ttf");
+}
+
+p{
+  font-family: satisfyRegular;
+  font-size: 1.3rem;
+}
+
+ul.timeline{
+  list-style-type: none;
+  position: relative;
+}
+ul.timeline:before {
+  content: ' ';
+  background: #d4d9df;
+  display: inline-block;
+  position: absolute;
+  left: 29px;
+  width: 2px;
+  height: 100%;
+  z-index: 400;
+}
+ul.timeline > li {
+  margin: 20px 0;
+  padding-left: 20px;
+}
+ul.timeline > li:before {
+  content: ' ';
+  background: white;
+  display: inline-block;
+  position: absolute;
+  border-radius: 50%;
+  border: 3px solid green;
+  left: 20px;
+  width: 20px;
+  height: 20px;
+  z-index: 400;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
