--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,16 @@ ul.timeline > li:before {
   z-index: 400;
 }
 
+.underline{
+  text-decoration: underline;
+}
 
+.no-underline{
+  text-decoration: none;
+}
+.social-image{
+  width: 40px !important;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
