--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,11 @@ ul.timeline > li:before {
   z-index: 400;
 }
 
+article{
+  margin-left: auto !important;
+  margin-right: auto !important; 
+}
+
 .underline{
   text-decoration: underline;
 }
