--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,19 @@
   clip-path: circle();
 }
 
+.rose-img{
+  width: 60% !important;
+}
+
+.valentine-msg{
+  font-family: satisfyRegular;
+  font-size: 2.3rem;
+}
+
+.msg-text{
+  font-size: 1.5rem;
+}
+
 .name{
   text-align: center;
   font-size: 2.5rem;
